# WindowedClaude

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
assets/: app.manifest  icon.icns
scripts/: sign.ps1
src/: config.rs  main.rs  session.rs
src/installer/: claude.rs  git.rs  mod.rs  shortcuts.rs  uninstall.rs
src/terminal/: mod.rs  pty.rs
src/ui/: mod.rs  renderer.rs  theme.rs  window.rs
