[package]
name = "windowed-claude"
version = "1.2.1"
edition = "2021"
description = "WindowedClaude — themed terminal for Claude Code on Windows, one-click install"
license = "MIT"

[dependencies]
# Window + pixel buffer (no GL needed)
winit = "0.30"
softbuffer = "0.4"

# Font rasterization (pure Rust, no system deps)
fontdue = "0.9"

# Terminal emulation (Alacritty's core)
alacritty_terminal = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Real PTY (ConPTY on Windows, pty on Unix)
portable-pty = "0.8"

# Clipboard
arboard = "3"

# System utilities
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
zip = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"

# macOS-specific (native window opacity + corner radius)
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true
strip = true
codegen-units = 1
